@@ -25,19 +25,34 @@
 #include "processor.h"
 #include <X11/keysym.h>
 
+static inline unsigned long window_alloc_color (zbar_window_t *w,
+                                                Colormap cmap,
+                                                unsigned short r,
+                                                unsigned short g,
+                                                unsigned short b)
+{
+    XColor color;
+    color.red = r;
+    color.green = g;
+    color.blue = b;
+    color.flags = 0;
+    XAllocColor(w->display, cmap, &color);
+    return(color.pixel);
+}
+
 static inline int window_alloc_colors (zbar_window_t *w)
 {
     Colormap cmap = DefaultColormap(w->display, DefaultScreen(w->display));
-    XColor color;
     int i;
-    for(i = 0; i < 8; i++) {
-        color.red   = (i & 4) ? (0xcc * 0x101) : 0;
-        color.green = (i & 2) ? (0xcc * 0x101) : 0;
-        color.blue  = (i & 1) ? (0xcc * 0x101) : 0;
-        color.flags = 0;
-        XAllocColor(w->display, cmap, &color);
-        w->colors[i] = color.pixel;
-    }
+    for(i = 0; i < 8; i++)
+        w->colors[i] =
+            window_alloc_color(w, cmap,
+                               (i & 4) ? (0xcc * 0x101) : 0,
+                               (i & 2) ? (0xcc * 0x101) : 0,
+                               (i & 1) ? (0xcc * 0x101) : 0);
+
+    w->logo_colors[0] = window_alloc_color(w, cmap, 0xd709, 0x3333, 0x3333);
+    w->logo_colors[1] = window_alloc_color(w, cmap, 0xa3d6, 0x0000, 0x0000);
     return(0);
 }
 
@@ -60,6 +75,48 @@ static inline int window_hide_cursor (zbar_window_t *w)
     return(0);
 }
 
+int _zbar_window_resize (zbar_window_t *w)
+{
+    int lbw;
+    if(w->height * 8 / 10 <= w->width)
+        lbw = w->height / 36;
+    else
+        lbw = w->width * 5 / 144;
+    if(lbw < 1)
+        lbw = 1;
+    w->logo_scale = lbw;
+    if(w->logo_zbars)
+        XDestroyRegion(w->logo_zbars);
+    w->logo_zbars = XCreateRegion();
+
+    int x0 = w->width / 2;
+    int y0 = w->height / 2;
+    int by0 = y0 - 54 * lbw / 5;
+    int bh = 108 * lbw / 5;
+
+    static const int bx[5] = { -6, -3, -1,  2,  5 };
+    static const int bw[5] = {  1,  1,  2,  2,  1 };
+
+    int i;
+    for(i = 0; i < 5; i++) {
+        XRectangle *bar = &w->logo_bars[i];
+        bar->x = x0 + lbw * bx[i];
+        bar->y = by0;
+        bar->width = lbw * bw[i];
+        bar->height = bh;
+        XUnionRectWithRegion(bar, w->logo_zbars, w->logo_zbars);
+    }
+
+    static const int zx[4] = { -7,  7, -7,  7 };
+    static const int zy[4] = { -8, -8,  8,  8 };
+
+    for(i = 0; i < 4; i++) {
+        w->logo_z[i].x = x0 + lbw * zx[i];
+        w->logo_z[i].y = y0 + lbw * zy[i];
+    }
+    return(0);
+}
+
 int _zbar_window_attach (zbar_window_t *w,
                          void *display,
                          unsigned long win)
@@ -68,6 +125,11 @@ int _zbar_window_attach (zbar_window_t *w,
         /* cleanup existing resources */
         if(w->gc)
             XFreeGC(w->display, w->gc);
+        assert(!w->exposed);
+        if(w->logo_zbars) {
+            XDestroyRegion(w->logo_zbars);
+            w->logo_zbars = NULL;
+        }
         w->display = NULL;
     }
     w->xwin = 0;
@@ -83,6 +145,7 @@ int _zbar_window_attach (zbar_window_t *w,
     XGetWindowAttributes(w->display, w->xwin, &attr);
     w->width = attr.width;
     w->height = attr.height;
+    _zbar_window_resize(w);
 
     window_alloc_colors(w);
     window_hide_cursor(w);
@@ -103,17 +166,37 @@ static int x_handle_event (zbar_processor_t *proc)
     XNextEvent(proc->display, &ev);
 
     switch(ev.type) {
-    case Expose:
-        /* FIXME ignore when running */
-        if(!ev.xexpose.count)
-            zbar_window_redraw(proc->window);
+    case Expose: {
+        /* FIXME ignore when running(?) */
+        XExposeEvent *exp = (XExposeEvent*)&ev;
+        XRectangle r;
+        Region exposed = XCreateRegion();
+        while(1) {
+            assert(ev.type == Expose);
+            r.x = exp->x;
+            r.y = exp->y;
+            r.width = exp->width;
+            r.height = exp->height;
+            XUnionRectWithRegion(&r, exposed, exposed);
+
+            if(!exp->count)
+                break;
+            XNextEvent(proc->display, &ev);
+        }
+
+        proc->window->exposed = exposed;
+        zbar_window_redraw(proc->window);
+        proc->window->exposed = 0;
+
+        XDestroyRegion(exposed);
         break;
+    }
 
     case ConfigureNotify:
         zprintf(3, "resized to %d x %d\n",
                 ev.xconfigure.width, ev.xconfigure.height);
         zbar_window_resize(proc->window,
-                            ev.xconfigure.width, ev.xconfigure.height);
+                           ev.xconfigure.width, ev.xconfigure.height);
         break;
 
     case ClientMessage:
@@ -266,9 +349,9 @@ int _zbar_window_close (zbar_processor_t *proc)
     return(0);
 }
 
-int _zbar_window_resize (zbar_processor_t *proc,
-                         unsigned width,
-                         unsigned height)
+int _zbar_window_set_size (zbar_processor_t *proc,
+                           unsigned width,
+                           unsigned height)
 {
     if(proc->display) {
         XResizeWindow(proc->display, proc->xwin, width, height);
@@ -330,5 +413,46 @@ int _zbar_window_draw_marker(zbar_window_t *w,
     XDrawRectangle(w->display, w->xwin, w->gc, x - 2, y - 2, 4, 4);
     XDrawLine(w->display, w->xwin, w->gc, x, y - 3, x, y + 3);
     XDrawLine(w->display, w->xwin, w->gc, x - 3, y, x + 3, y);
+    return(0);
+}
+
+int _zbar_window_draw_logo (zbar_window_t *w)
+{
+    if(w->exposed)
+        XSetRegion(w->display, w->gc, w->exposed);
+
+    int screen = DefaultScreen(w->display);
+
+    /* clear to white */
+    XSetForeground(w->display, w->gc, WhitePixel(w->display, screen));
+    XFillRectangle(w->display, w->xwin, w->gc, 0, 0, w->width, w->height);
+
+    if(!w->logo_scale || !w->logo_zbars)
+        return(0);
+
+    XSetForeground(w->display, w->gc, BlackPixel(w->display, screen));
+    XFillRectangles(w->display, w->xwin, w->gc, w->logo_bars, 5);
+
+    XSetLineAttributes(w->display, w->gc, 2 * w->logo_scale,
+                       LineSolid, CapRound, JoinRound);
+
+    XSetForeground(w->display, w->gc, w->logo_colors[0]);
+    XDrawLines(w->display, w->xwin, w->gc, w->logo_z, 4, CoordModeOrigin);
+
+    if(w->exposed) {
+        XIntersectRegion(w->logo_zbars, w->exposed, w->exposed);
+        XSetRegion(w->display, w->gc, w->exposed);
+    }
+    else
+        XSetRegion(w->display, w->gc, w->logo_zbars);
+
+    XSetForeground(w->display, w->gc, w->logo_colors[1]);
+    XDrawLines(w->display, w->xwin, w->gc, w->logo_z, 4, CoordModeOrigin);
+    XFlush(w->display);
+
+    /* reset GC */
+    XSetLineAttributes(w->display, w->gc, 0,
+                       LineSolid, CapButt, JoinMiter);
+    XSetClipMask(w->display, w->gc, None);
     return(0);
 }
